# AutoRhythm

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  RESEARCH-BRIEF.md  pyproject.toml
.agents/plans/: fix-guide-extra-syllables.md  foundation-phase0-phase2.md  remaining-phases-1-3-4-5-6-7-8.md
.agents/reviews/: 2026-04-25T080737_phase0-phase2-uncommitted.json  2026-04-25T083628_phase0-phase2-post-fix.json  2026-04-25T084713_phase0-phase2-round3.json  2026-04-25T200510_phases-1-3-4-5-6-7-8.json
configs/: default.yaml
docs/: anchor_map.json  canonical_syllables.json  index.html
example/: beat.m4a  lyrics.txt  test_config.yaml  vocals.m4a
example4/: lyrics.txt
src/rapmap/: __init__.py  cli.py  config.py
src/rapmap/align/: base.py  derive_syllables.py  mfa.py  textgrid.py  validate.py
src/rapmap/audacity/: import_project.py  labels.py  script_pipe.py
src/rapmap/audio/: io.py  normalize.py  render.py  source_separation.py  stretch.py
src/rapmap/configs/: default.yaml  pronunciation_overrides.yaml
src/rapmap/edit/: crossfade.py  grouping.py  manifest.py  operations.py  planner.py  safe_boundaries.py
src/rapmap/guide/: _acestep_generate.py  acestep.py  base.py  manual.py  preprocess.py
src/rapmap/lyrics/: normalize.py  overrides.py  parser.py  (+2 more)
tests/: test_anchor_mapping.py  test_audacity_labels.py  test_audio_normalize.py  test_cli.py  test_config.py  test_edit_plan_exactness.py  test_guide.py  test_guide_preprocess.py  test_lyrics_parser.py  test_render_clip_lengths.py  test_safe_boundary_grouping.py  test_syllabification.py  test_textgrid.py
(+3 files in other folders)
